copy html, compile ts,  minify js done

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
         <hr>
         <memory-board></memory-board>
     </div>
-    <script src="bundle.js"></script>
+    <script src="bundle-min.js"></script>
 </body>
 
 </html>
